option java_outer_classname = "LCRolloverAlarm";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting.parameter";

message RolloverAlarm{
	required	int32	rolloverAngle		=1; 
}
